backend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: fintech-app
spec:
  type: LoadBalancer
  selector:
    app: backend
  ports:
    - port: 3001
      targetPort: 3001
